--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
-    "swr": "^0.4.2"
+    "swr": "^0.4.2",
+    "uuid": "^8.3.2"
   }
 }
